# graphcore_hpc_cookbook

./: README.md
benchmarks/: CMakeLists.txt  README.md
benchmarks/src/: CMakeLists.txt  matmul_peak.cpp
data-dependent-communication/: CMakeCache.txt  Makefile  cmake_install.cmake
data-dependent-communication/src/: Makefile  cmake_install.cmake  particles
monte-carlo-method/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  serialized_graph.capnp
monte-carlo-method/integrals/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  integrals_options.hpp  integrals_vertex.cpp  profile.pop  serialized_graph.capnp  vertex_ipu_cont  vertex_ipu_cont.cpp  vertex_ipu_corner  vertex_ipu_corner.cpp  vertex_ipu_nag  vertex_ipu_nag.cpp  vertex_ipu_prod  vertex_ipu_prod.cpp
monte-carlo-method/pi/: CMakeCache.txt  CMakeLists.txt  Makefile  a  cmake_install.cmake  iterative_ipu_pi  iterative_ipu_pi.cpp  pi_options.hpp  pi_vertex.cpp  poplibs_ipu_pi  poplibs_ipu_pi.cpp  profile.pop  profile_2cimd57v.pop  profile_6aurwq0t.pop  profile_a37cstvp.pop  profile_e772nz4k.pop  profile_hf6w35kj.pop  profile_j9zwehwa.pop  profile_ljrfgfh3.pop  profile_tvsri9nv.pop  profile_ujom7ayo.pop  serialized_graph.capnp  vertex_ipu_pi  vertex_ipu_pi.cpp
monte-carlo-method/pi/integrals/: Makefile  cmake_install.cmake  vertex_ipu_cont  vertex_ipu_corner  vertex_ipu_nag  vertex_ipu_prod
monte-carlo-method/pi/pi/: Makefile  cmake_install.cmake  pi_vertex.cpp
